# OCR-Face-Recognition-with-OpenCV

./: CMakeLists.txt  README.md
html/: CMakeLists_8txt.html  GerenteBD_8cpp.html  GerenteBD_8h.html  GerenteBD_8h__dep__incl.map  GerenteBD_8h__dep__incl.md5  GerenteBD_8h_source.html  GerenteLogin_8cpp.html  GerenteLogin_8cpp__incl.map  GerenteLogin_8cpp__incl.md5  GerenteLogin_8cpp_a6079220416e9a40882f29520856d6049_icgraph.md5  GerenteLogin_8h.html  GerenteLogin_8h__incl.map  GerenteLogin_8h__incl.md5  GerenteLogin_8h_ae21f0e04b10740251ce9a20c2532877d_icgraph.map  GerenteLogin_8h_source.html  Main_8cpp.html  Main_8cpp__incl.map  Main_8cpp__incl.md5  Main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  Main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  README_8md.html  Reserva_8cpp.html  Reserva_8h.html  Reserva_8h__dep__incl.map  Reserva_8h__dep__incl.md5  Reserva_8h_source.html  SistemaLinf_8cpp.html  SistemaLinf_8cpp__incl.map  SistemaLinf_8cpp__incl.md5  SistemaLinf_8h.html  SistemaLinf_8h__incl.map  SistemaLinf_8h__incl.md5  SistemaLinf_8h_source.html  Usuario_8cpp.html  Usuario_8cpp__incl.map  Usuario_8cpp__incl.md5  Usuario_8h.html  Usuario_8h__dep__incl.map  Usuario_8h__dep__incl.md5  Usuario_8h_source.html  (+138 more)
html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_e.js  all_f.js  files_0.js  files_4.js  functions_0.js  functions_3.js  functions_4.js  searchdata.js  (+8 more)
include/: GerenteBD.h  GerenteLogin.h  Reserva.h  SistemaLinf.h  Usuario.h
src/: GerenteBD.cpp  GerenteLogin.cpp  Main.cpp  SistemaLinf.cpp
